# depression-network-model

./: .gitignore  README.md  main.py  mfq_generation.py  network_generation.py  pyproject.toml
analysis/: analyze-simulated-results.Rmd
results/: network_varying_increase_support_level.csv  network_varying_p1.csv  network_varying_p1_0.65.csv  simulated_data_baseline.0.01.csv  simulated_data_baseline.csv
