[tool.poetry]
name = "depression-network-model"
version = "0.1.0"
description = "Mitigating depression with clinical support systems using network models"
authors = ["thy0212 <thyat.nguyen@student.maastrichtuniversity.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
